...
                                8.0, 0.0, 8.0, 0.0),
                            tabs: const [
                              Tab(
                                text: 'Signup',
                              ),
                              Tab(
                                key: ValueKey('LoginTab_7ff5'),
                                text: 'Login',
                              ),
                            ],
                            controller: _model.tabBarController,
                            onTap: (i) async {
                              [() async {}, () async {}][i]();
...
                                  child: Column(
                                    mainAxisSize: MainAxisSize.max,
                                    children: [
                                      SizedBox(
                                        width: 321.0,
                                        child: TextFormField(
                                          key: const ValueKey('Login-Email_t4fx'),
                                          controller:
                                              _model.loginEmailTextController,
                                          focusNode: _model.loginEmailFocusNode,
                                          onChanged: (_) =>
                                              EasyDebounce.debounce(
                                            '_model.loginEmailTextController',
...
                                              .asValidator(context),
                                        ),
                                      ),
                                      SizedBox(
                                        width: 321.0,
                                        child: TextFormField(
                                          key: const ValueKey('Login-Password_7wq7'),
                                          controller: _model
                                              .loginPasswordTextController,
                                          focusNode:
                                              _model.loginPasswordFocusNode,
                                          autofocus: false,
                                          textInputAction: TextInputAction.done,
...
