...
class MainWidget extends StatefulWidget {
  const MainWidget({
    super.key,
    String? goalType,
    String? targetOutput,
    String? timeFrame,
  })  : goalType = goalType ?? 'Goal',
        targetOutput = targetOutput ?? '100',
        timeFrame = timeFrame ?? 'daily';

  final String goalType;
  final String targetOutput;
  final String timeFrame;
...
